# rerun-ui

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  index.html  pyproject.toml
.github/workflows/: build-wheels.yml
docs/plans/: 2026-04-21-rive-cpp-rust-backend.md  2026-04-21-rive-face-api.md
examples/: pointer_capture_3d.py  smoke_test.py
native/: rive_renderer.cc  rive_renderer.h
rerun_ui/: __init__.py  _face_surface.py  _manager.py  _rive_face.py  _types.py  _viewer_host.py
rerun_ui/_rive_node/: package-lock.json  package.json  renderer.mjs
simple/: index.html
simple/rerun_ui/: index.html
src/: ipc.rs  lib.rs  rive.rs  rive_ffi.rs  viewer.rs
tests/: test_face_surface.py  test_manager.py  test_reconnect.py  test_rive_face.py
tests/assets/: README.md  state_machine_test.riv
