[package]
name = "rerun-ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
build = "build.rs"

[lib]
name = "_rerun_ui"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py310"] }
re_view_spatial = "0.29.2"
rerun = { version = "0.29.2", default-features = false, features = ["native_viewer", "sdk", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"
walkdir = "2"

[patch.crates-io]
re_view_spatial = { path = "vendor/re_view_spatial" }

[profile.release]
lto = "thin"
codegen-units = 1
